tdf#152037 XLSX import: fix false alarm data validation error

Fix validation error on valid input by adding missing
SimplifyCompiledFormula() to the implementation of
setFormula1() and setFormula2() of XSheetCondition UNO API,
which used by the XLSX input filter.

Change-Id: I8389227eb5a609c29e8d466cf62420bae36f7927
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152295
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit b14118feb4da3b68caea3e9e60b4eb0f2f83593b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152328
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>